# twitter-openapi

./: README.md  pyproject.toml
src/openapi/schemas/: tweet.yaml  typename.yaml  user.yaml
