[project]
name = "twitter-openapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "László van den Hoek", email = "laszlo.vandenhoek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aenum>=3.1.16",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "xclienttransaction>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dateutil>=2.8.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
